## Makefile.am for LAPACK headers

AUTOMAKE_OPTIONS = 1.4

LAPACK_public_h_sources = \
	cbdsqr.h \
	cgbbrd.h \
	cgbcon.h \
	cgbequ.h \
	cgbrfs.h \
	cgbsv.h \
	cgbsvx.h \
	cgbtf2.h \
	cgbtrf.h \
	cgbtrs.h \
	cgebak.h \
	cgebal.h \
	cgebd2.h \
	cgebrd.h \
	cgecon.h \
	cgeequ.h \
	cgees.h \
	cgeesx.h \
	cgeev.h \
	cgeevx.h \
	cgegs.h \
	cgegv.h \
	cgehd2.h \
	cgehrd.h \
	cgelq2.h \
	cgelqf.h \
	cgels.h \
	cgelss.h \
	cgelsx.h \
	cgeql2.h \
	cgeqlf.h \
	cgeqpf.h \
	cgeqr2.h \
	cgeqrf.h \
	cgerfs.h \
	cgerq2.h \
	cgerqf.h \
	cgesvd.h \
	cgesv.h \
	cgesvx.h \
	cgetf2.h \
	cgetrf.h \
	cgetri.h \
	cgetrs.h \
	cggbak.h \
	cggbal.h \
	cggglm.h \
	cgghrd.h \
	cgglse.h \
	cggqrf.h \
	cggrqf.h \
	cggsvd.h \
	cggsvp.h \
	cgtcon.h \
	cgtrfs.h \
	cgtsv.h \
	cgtsvx.h \
	cgttrf.h \
	cgttrs.h \
	chbevd.h \
	chbev.h \
	chbevx.h \
	chbgst.h \
	chbgv.h \
	chbtrd.h \
	checon.h \
	cheevd.h \
	cheev.h \
	cheevx.h \
	chegs2.h \
	chegst.h \
	chegv.h \
	cherfs.h \
	chesv.h \
	chesvx.h \
	chetd2.h \
	chetf2.h \
	chetrd.h \
	chetrf.h \
	chetri.h \
	chetrs.h \
	chgeqz.h \
	chpcon.h \
	chpevd.h \
	chpev.h \
	chpevx.h \
	chpgst.h \
	chpgv.h \
	chprfs.h \
	chpsv.h \
	chpsvx.h \
	chptrd.h \
	chptrf.h \
	chptri.h \
	chptrs.h \
	chsein.h \
	chseqr.h \
	clabrd.h \
	clacgv.h \
	clacon.h \
	clacpy.h \
	clacrm.h \
	clacrt.h \
	cladiv.h \
	claed0.h \
	claed7.h \
	claed8.h \
	claein.h \
	claesy.h \
	claev2.h \
	clags2.h \
	clagtm.h \
	clahef.h \
	clahqr.h \
	clahrd.h \
	claic1.h \
	clangb.h \
	clange.h \
	clangt.h \
	clanhb.h \
	clanhe.h \
	clanhp.h \
	clanhs.h \
	clanht.h \
	clansb.h \
	clansp.h \
	clansy.h \
	clantb.h \
	clantp.h \
	clantr.h \
	clapll.h \
	clapmt.h \
	claqgb.h \
	claqge.h \
	claqhb.h \
	claqhe.h \
	claqhp.h \
	claqsb.h \
	claqsp.h \
	claqsy.h \
	clar2v.h \
	clarfb.h \
	clarfg.h \
	clarf.h \
	clarft.h \
	clarfx.h \
	clargv.h \
	clarnv.h \
	clartg.h \
	clartv.h \
	clascl.h \
	claset.h \
	clasr.h \
	classq.h \
	claswp.h \
	clasyf.h \
	clatbs.h \
	clatps.h \
	clatrd.h \
	clatrs.h \
	clatzm.h \
	clauu2.h \
	clauum.h \
	cpbcon.h \
	cpbequ.h \
	cpbrfs.h \
	cpbstf.h \
	cpbsv.h \
	cpbsvx.h \
	cpbtf2.h \
	cpbtrf.h \
	cpbtrs.h \
	cpocon.h \
	cpoequ.h \
	cporfs.h \
	cposv.h \
	cposvx.h \
	cpotf2.h \
	cpotrf.h \
	cpotri.h \
	cpotrs.h \
	cppcon.h \
	cppequ.h \
	cpprfs.h \
	cppsv.h \
	cppsvx.h \
	cpptrf.h \
	cpptri.h \
	cpptrs.h \
	cptcon.h \
	cpteqr.h \
	cptrfs.h \
	cptsv.h \
	cptsvx.h \
	cpttrf.h \
	cpttrs.h \
	crot.h \
	cspcon.h \
	cspmv.h \
	csprfs.h \
	cspr.h \
	cspsv.h \
	cspsvx.h \
	csptrf.h \
	csptri.h \
	csptrs.h \
	csrot.h \
	csrscl.h \
	cstedc.h \
	cstein.h \
	csteqr.h \
	csycon.h \
	csymv.h \
	csyrfs.h \
	csyr.h \
	csysv.h \
	csysvx.h \
	csytf2.h \
	csytrf.h \
	csytri.h \
	csytrs.h \
	ctbcon.h \
	ctbrfs.h \
	ctbtrs.h \
	ctgevc.h \
	ctgsja.h \
	ctpcon.h \
	ctprfs.h \
	ctptri.h \
	ctptrs.h \
	ctrcon.h \
	ctrevc.h \
	ctrexc.h \
	ctrrfs.h \
	ctrsen.h \
	ctrsna.h \
	ctrsyl.h \
	ctrti2.h \
	ctrtri.h \
	ctrtrs.h \
	ctzrqf.h \
	cung2l.h \
	cung2r.h \
	cungbr.h \
	cunghr.h \
	cungl2.h \
	cunglq.h \
	cungql.h \
	cungqr.h \
	cungr2.h \
	cungrq.h \
	cungtr.h \
	cunm2l.h \
	cunm2r.h \
	cunmbr.h \
	cunmhr.h \
	cunml2.h \
	cunmlq.h \
	cunmql.h \
	cunmqr.h \
	cunmr2.h \
	cunmrq.h \
	cunmtr.h \
	cupgtr.h \
	cupmtr.h \
	dbdsqr.h \
	ddisna.h \
	dgbbrd.h \
	dgbcon.h \
	dgbequ.h \
	dgbrfs.h \
	dgbsv.h \
	dgbsvx.h \
	dgbtf2.h \
	dgbtrf.h \
	dgbtrs.h \
	dgebak.h \
	dgebal.h \
	dgebd2.h \
	dgebrd.h \
	dgecon.h \
	dgeequ.h \
	dgees.h \
	dgeesx.h \
	dgeev.h \
	dgeevx.h \
	dgegs.h \
	dgegv.h \
	dgehd2.h \
	dgehrd.h \
	dgelq2.h \
	dgelqf.h \
	dgels.h \
	dgelss.h \
	dgelsx.h \
	dgeql2.h \
	dgeqlf.h \
	dgeqpf.h \
	dgeqr2.h \
	dgeqrf.h \
	dgerfs.h \
	dgerq2.h \
	dgerqf.h \
	dgesvd.h \
	dgesv.h \
	dgesvx.h \
	dgetf2.h \
	dgetrf.h \
	dgetri.h \
	dgetrs.h \
	dggbak.h \
	dggbal.h \
	dggglm.h \
	dgghrd.h \
	dgglse.h \
	dggqrf.h \
	dggrqf.h \
	dggsvd.h \
	dggsvp.h \
	dgtcon.h \
	dgtrfs.h \
	dgtsv.h \
	dgtsvx.h \
	dgttrf.h \
	dgttrs.h \
	dhgeqz.h \
	dhsein.h \
	dhseqr.h \
	dlabad.h \
	dlabrd.h \
	dlacon.h \
	dlacpy.h \
	dladiv.h \
	dlae2.h \
	dlaebz.h \
	dlaed0.h \
	dlaed1.h \
	dlaed2.h \
	dlaed3.h \
	dlaed4.h \
	dlaed5.h \
	dlaed6.h \
	dlaed7.h \
	dlaed8.h \
	dlaed9.h \
	dlaeda.h \
	dlaein.h \
	dlaev2.h \
	dlaexc.h \
	dlag2.h \
	dlags2.h \
	dlagtf.h \
	dlagtm.h \
	dlagts.h \
	dlahqr.h \
	dlahrd.h \
	dlaic1.h \
	dlaln2.h \
	dlamch.h \
	dlamrg.h \
	dlangb.h \
	dlange.h \
	dlangt.h \
	dlanhs.h \
	dlansb.h \
	dlansp.h \
	dlanst.h \
	dlansy.h \
	dlantb.h \
	dlantp.h \
	dlantr.h \
	dlanv2.h \
	dlapll.h \
	dlapmt.h \
	dlapy2.h \
	dlapy3.h \
	dlaqgb.h \
	dlaqge.h \
	dlaqsb.h \
	dlaqsp.h \
	dlaqsy.h \
	dlaqtr.h \
	dlar2v.h \
	dlarfb.h \
	dlarfg.h \
	dlarf.h \
	dlarft.h \
	dlarfx.h \
	dlargv.h \
	dlarnv.h \
	dlartg.h \
	dlartv.h \
	dlaruv.h \
	dlas2.h \
	dlascl.h \
	dlaset.h \
	dlasq1.h \
	dlasq2.h \
	dlasq3.h \
	dlasq4.h \
	dlasr.h \
	dlasrt.h \
	dlassq.h \
	dlasv2.h \
	dlaswp.h \
	dlasy2.h \
	dlasyf.h \
	dlatbs.h \
	dlatps.h \
	dlatrd.h \
	dlatrs.h \
	dlatzm.h \
	dlauu2.h \
	dlauum.h \
	dopgtr.h \
	dopmtr.h \
	dorg2l.h \
	dorg2r.h \
	dorgbr.h \
	dorghr.h \
	dorgl2.h \
	dorglq.h \
	dorgql.h \
	dorgqr.h \
	dorgr2.h \
	dorgrq.h \
	dorgtr.h \
	dorm2l.h \
	dorm2r.h \
	dormbr.h \
	dormhr.h \
	dorml2.h \
	dormlq.h \
	dormql.h \
	dormqr.h \
	dormr2.h \
	dormrq.h \
	dormtr.h \
	dpbcon.h \
	dpbequ.h \
	dpbrfs.h \
	dpbstf.h \
	dpbsv.h \
	dpbsvx.h \
	dpbtf2.h \
	dpbtrf.h \
	dpbtrs.h \
	dpocon.h \
	dpoequ.h \
	dporfs.h \
	dposv.h \
	dposvx.h \
	dpotf2.h \
	dpotrf.h \
	dpotri.h \
	dpotrs.h \
	dppcon.h \
	dppequ.h \
	dpprfs.h \
	dppsv.h \
	dppsvx.h \
	dpptrf.h \
	dpptri.h \
	dpptrs.h \
	dptcon.h \
	dpteqr.h \
	dptrfs.h \
	dptsv.h \
	dptsvx.h \
	dpttrf.h \
	dpttrs.h \
	drscl.h \
	dsbevd.h \
	dsbev.h \
	dsbevx.h \
	dsbgst.h \
	dsbgv.h \
	dsbtrd.h \
	dsecnd.h \
	dspcon.h \
	dspevd.h \
	dspev.h \
	dspevx.h \
	dspgst.h \
	dspgv.h \
	dsprfs.h \
	dspsv.h \
	dspsvx.h \
	dsptrd.h \
	dsptrf.h \
	dsptri.h \
	dsptrs.h \
	dstebz.h \
	dstedc.h \
	dstein.h \
	dsteqr.h \
	dsterf.h \
	dstevd.h \
	dstev.h \
	dstevx.h \
	dsycon.h \
	dsyevd.h \
	dsyev.h \
	dsyevx.h \
	dsygs2.h \
	dsygst.h \
	dsygv.h \
	dsyrfs.h \
	dsysv.h \
	dsysvx.h \
	dsytd2.h \
	dsytf2.h \
	dsytrd.h \
	dsytrf.h \
	dsytri.h \
	dsytrs.h \
	dtbcon.h \
	dtbrfs.h \
	dtbtrs.h \
	dtgevc.h \
	dtgsja.h \
	dtpcon.h \
	dtprfs.h \
	dtptri.h \
	dtptrs.h \
	dtrcon.h \
	dtrevc.h \
	dtrexc.h \
	dtrrfs.h \
	dtrsen.h \
	dtrsna.h \
	dtrsyl.h \
	dtrti2.h \
	dtrtri.h \
	dtrtrs.h \
	dtzrqf.h \
	dzsum1.h \
	icmax1.h \
	ilaenv.h \
	izmax1.h \
	lsame.h \
	lsamen.h \
	sbdsqr.h \
	scsum1.h \
	sdisna.h \
	second.h \
	sgbbrd.h \
	sgbcon.h \
	sgbequ.h \
	sgbrfs.h \
	sgbsv.h \
	sgbsvx.h \
	sgbtf2.h \
	sgbtrf.h \
	sgbtrs.h \
	sgebak.h \
	sgebal.h \
	sgebd2.h \
	sgebrd.h \
	sgecon.h \
	sgeequ.h \
	sgees.h \
	sgeesx.h \
	sgeev.h \
	sgeevx.h \
	sgegs.h \
	sgegv.h \
	sgehd2.h \
	sgehrd.h \
	sgelq2.h \
	sgelqf.h \
	sgels.h \
	sgelss.h \
	sgelsx.h \
	sgeql2.h \
	sgeqlf.h \
	sgeqpf.h \
	sgeqr2.h \
	sgeqrf.h \
	sgerfs.h \
	sgerq2.h \
	sgerqf.h \
	sgesvd.h \
	sgesv.h \
	sgesvx.h \
	sgetf2.h \
	sgetrf.h \
	sgetri.h \
	sgetrs.h \
	sggbak.h \
	sggbal.h \
	sggglm.h \
	sgghrd.h \
	sgglse.h \
	sggqrf.h \
	sggrqf.h \
	sggsvd.h \
	sggsvp.h \
	sgtcon.h \
	sgtrfs.h \
	sgtsv.h \
	sgtsvx.h \
	sgttrf.h \
	sgttrs.h \
	shgeqz.h \
	shsein.h \
	shseqr.h \
	slabad.h \
	slabrd.h \
	slacon.h \
	slacpy.h \
	sladiv.h \
	slae2.h \
	slaebz.h \
	slaed0.h \
	slaed1.h \
	slaed2.h \
	slaed3.h \
	slaed4.h \
	slaed5.h \
	slaed6.h \
	slaed7.h \
	slaed8.h \
	slaed9.h \
	slaeda.h \
	slaein.h \
	slaev2.h \
	slaexc.h \
	slag2.h \
	slags2.h \
	slagtf.h \
	slagtm.h \
	slagts.h \
	slahqr.h \
	slahrd.h \
	slaic1.h \
	slaln2.h \
	slamch.h \
	slamrg.h \
	slangb.h \
	slange.h \
	slangt.h \
	slanhs.h \
	slansb.h \
	slansp.h \
	slanst.h \
	slansy.h \
	slantb.h \
	slantp.h \
	slantr.h \
	slanv2.h \
	slapll.h \
	slapmt.h \
	slapy2.h \
	slapy3.h \
	slaqgb.h \
	slaqge.h \
	slaqsb.h \
	slaqsp.h \
	slaqsy.h \
	slaqtr.h \
	slar2v.h \
	slarfb.h \
	slarfg.h \
	slarf.h \
	slarft.h \
	slarfx.h \
	slargv.h \
	slarnv.h \
	slartg.h \
	slartv.h \
	slaruv.h \
	slas2.h \
	slascl.h \
	slaset.h \
	slasq1.h \
	slasq2.h \
	slasq3.h \
	slasq4.h \
	slasr.h \
	slasrt.h \
	slassq.h \
	slasv2.h \
	slaswp.h \
	slasy2.h \
	slasyf.h \
	slatbs.h \
	slatps.h \
	slatrd.h \
	slatrs.h \
	slatzm.h \
	slauu2.h \
	slauum.h \
	sopgtr.h \
	sopmtr.h \
	sorg2l.h \
	sorg2r.h \
	sorgbr.h \
	sorghr.h \
	sorgl2.h \
	sorglq.h \
	sorgql.h \
	sorgqr.h \
	sorgr2.h \
	sorgrq.h \
	sorgtr.h \
	sorm2l.h \
	sorm2r.h \
	sormbr.h \
	sormhr.h \
	sorml2.h \
	sormlq.h \
	sormql.h \
	sormqr.h \
	sormr2.h \
	sormrq.h \
	sormtr.h \
	spbcon.h \
	spbequ.h \
	spbrfs.h \
	spbstf.h \
	spbsv.h \
	spbsvx.h \
	spbtf2.h \
	spbtrf.h \
	spbtrs.h \
	spocon.h \
	spoequ.h \
	sporfs.h \
	sposv.h \
	sposvx.h \
	spotf2.h \
	spotrf.h \
	spotri.h \
	spotrs.h \
	sppcon.h \
	sppequ.h \
	spprfs.h \
	sppsv.h \
	sppsvx.h \
	spptrf.h \
	spptri.h \
	spptrs.h \
	sptcon.h \
	spteqr.h \
	sptrfs.h \
	sptsv.h \
	sptsvx.h \
	spttrf.h \
	spttrs.h \
	srscl.h \
	ssbevd.h \
	ssbev.h \
	ssbevx.h \
	ssbgst.h \
	ssbgv.h \
	ssbtrd.h \
	sspcon.h \
	sspevd.h \
	sspev.h \
	sspevx.h \
	sspgst.h \
	sspgv.h \
	ssprfs.h \
	sspsv.h \
	sspsvx.h \
	ssptrd.h \
	ssptrf.h \
	ssptri.h \
	ssptrs.h \
	sstebz.h \
	sstedc.h \
	sstein.h \
	ssteqr.h \
	ssterf.h \
	sstevd.h \
	sstev.h \
	sstevx.h \
	ssycon.h \
	ssyevd.h \
	ssyev.h \
	ssyevx.h \
	ssygs2.h \
	ssygst.h \
	ssygv.h \
	ssyrfs.h \
	ssysv.h \
	ssysvx.h \
	ssytd2.h \
	ssytf2.h \
	ssytrd.h \
	ssytrf.h \
	ssytri.h \
	ssytrs.h \
	stbcon.h \
	stbrfs.h \
	stbtrs.h \
	stgevc.h \
	stgsja.h \
	stpcon.h \
	stprfs.h \
	stptri.h \
	stptrs.h \
	strcon.h \
	strevc.h \
	strexc.h \
	strrfs.h \
	strsen.h \
	strsna.h \
	strsyl.h \
	strti2.h \
	strtri.h \
	strtrs.h \
	stzrqf.h \
	xerbla.h \
	zbdsqr.h \
	zdrot.h \
	zdrscl.h \
	zgbbrd.h \
	zgbcon.h \
	zgbequ.h \
	zgbrfs.h \
	zgbsv.h \
	zgbsvx.h \
	zgbtf2.h \
	zgbtrf.h \
	zgbtrs.h \
	zgebak.h \
	zgebal.h \
	zgebd2.h \
	zgebrd.h \
	zgecon.h \
	zgeequ.h \
	zgees.h \
	zgeesx.h \
	zgeev.h \
	zgeevx.h \
	zgegs.h \
	zgegv.h \
	zgehd2.h \
	zgehrd.h \
	zgelq2.h \
	zgelqf.h \
	zgels.h \
	zgelss.h \
	zgelsx.h \
	zgeql2.h \
	zgeqlf.h \
	zgeqpf.h \
	zgeqr2.h \
	zgeqrf.h \
	zgerfs.h \
	zgerq2.h \
	zgerqf.h \
	zgesvd.h \
	zgesv.h \
	zgesvx.h \
	zgetf2.h \
	zgetrf.h \
	zgetri.h \
	zgetrs.h \
	zggbak.h \
	zggbal.h \
	zggglm.h \
	zgghrd.h \
	zgglse.h \
	zggqrf.h \
	zggrqf.h \
	zggsvd.h \
	zggsvp.h \
	zgtcon.h \
	zgtrfs.h \
	zgtsv.h \
	zgtsvx.h \
	zgttrf.h \
	zgttrs.h \
	zhbevd.h \
	zhbev.h \
	zhbevx.h \
	zhbgst.h \
	zhbgv.h \
	zhbtrd.h \
	zhecon.h \
	zheevd.h \
	zheev.h \
	zheevx.h \
	zhegs2.h \
	zhegst.h \
	zhegv.h \
	zherfs.h \
	zhesv.h \
	zhesvx.h \
	zhetd2.h \
	zhetf2.h \
	zhetrd.h \
	zhetrf.h \
	zhetri.h \
	zhetrs.h \
	zhgeqz.h \
	zhpcon.h \
	zhpevd.h \
	zhpev.h \
	zhpevx.h \
	zhpgst.h \
	zhpgv.h \
	zhprfs.h \
	zhpsv.h \
	zhpsvx.h \
	zhptrd.h \
	zhptrf.h \
	zhptri.h \
	zhptrs.h \
	zhsein.h \
	zhseqr.h \
	zlabrd.h \
	zlacgv.h \
	zlacon.h \
	zlacpy.h \
	zlacrm.h \
	zlacrt.h \
	zladiv.h \
	zlaed0.h \
	zlaed7.h \
	zlaed8.h \
	zlaein.h \
	zlaesy.h \
	zlaev2.h \
	zlags2.h \
	zlagtm.h \
	zlahef.h \
	zlahqr.h \
	zlahrd.h \
	zlaic1.h \
	zlangb.h \
	zlange.h \
	zlangt.h \
	zlanhb.h \
	zlanhe.h \
	zlanhp.h \
	zlanhs.h \
	zlanht.h \
	zlansb.h \
	zlansp.h \
	zlansy.h \
	zlantb.h \
	zlantp.h \
	zlantr.h \
	zlapll.h \
	zlapmt.h \
	zlaqgb.h \
	zlaqge.h \
	zlaqhb.h \
	zlaqhe.h \
	zlaqhp.h \
	zlaqsb.h \
	zlaqsp.h \
	zlaqsy.h \
	zlar2v.h \
	zlarfb.h \
	zlarfg.h \
	zlarf.h \
	zlarft.h \
	zlarfx.h \
	zlargv.h \
	zlarnv.h \
	zlartg.h \
	zlartv.h \
	zlascl.h \
	zlaset.h \
	zlasr.h \
	zlassq.h \
	zlaswp.h \
	zlasyf.h \
	zlatbs.h \
	zlatps.h \
	zlatrd.h \
	zlatrs.h \
	zlatzm.h \
	zlauu2.h \
	zlauum.h \
	zpbcon.h \
	zpbequ.h \
	zpbrfs.h \
	zpbstf.h \
	zpbsv.h \
	zpbsvx.h \
	zpbtf2.h \
	zpbtrf.h \
	zpbtrs.h \
	zpocon.h \
	zpoequ.h \
	zporfs.h \
	zposv.h \
	zposvx.h \
	zpotf2.h \
	zpotrf.h \
	zpotri.h \
	zpotrs.h \
	zppcon.h \
	zppequ.h \
	zpprfs.h \
	zppsv.h \
	zppsvx.h \
	zpptrf.h \
	zpptri.h \
	zpptrs.h \
	zptcon.h \
	zpteqr.h \
	zptrfs.h \
	zptsv.h \
	zptsvx.h \
	zpttrf.h \
	zpttrs.h \
	zrot.h \
	zspcon.h \
	zspmv.h \
	zsprfs.h \
	zspr.h \
	zspsv.h \
	zspsvx.h \
	zsptrf.h \
	zsptri.h \
	zsptrs.h \
	zstedc.h \
	zstein.h \
	zsteqr.h \
	zsycon.h \
	zsymv.h \
	zsyrfs.h \
	zsyr.h \
	zsysv.h \
	zsysvx.h \
	zsytf2.h \
	zsytrf.h \
	zsytri.h \
	zsytrs.h \
	ztbcon.h \
	ztbrfs.h \
	ztbtrs.h \
	ztgevc.h \
	ztgsja.h \
	ztpcon.h \
	ztprfs.h \
	ztptri.h \
	ztptrs.h \
	ztrcon.h \
	ztrevc.h \
	ztrexc.h \
	ztrrfs.h \
	ztrsen.h \
	ztrsna.h \
	ztrsyl.h \
	ztrti2.h \
	ztrtri.h \
	ztrtrs.h \
	ztzrqf.h \
	zung2l.h \
	zung2r.h \
	zungbr.h \
	zunghr.h \
	zungl2.h \
	zunglq.h \
	zungql.h \
	zungqr.h \
	zungr2.h \
	zungrq.h \
	zungtr.h \
	zunm2l.h \
	zunm2r.h \
	zunmbr.h \
	zunmhr.h \
	zunml2.h \
	zunmlq.h \
	zunmql.h \
	zunmqr.h \
	zunmr2.h \
	zunmrq.h \
	zunmtr.h \
	zupgtr.h \
	zupmtr.h 

LAPACKincludedir = $(includedir)/LAPACK
LAPACKinclude_HEADERS = $(LAPACK_public_h_sources)

